# stream-manager-

./: .gitignore  Dockerfile  Readme.md  image_tagging_script.sh  pyproject.toml
.github/workflows/: deploy-stream-service.yml
k8s/: stream-manager-deployment.yaml
src/: purpose_subscribe_client.py  stream-manager.py
